# template-sync

./: .pre-commit-config.yaml  pyproject.toml
template_sync/: __main__.py  gh_utils.py  log.py
tests/: test_gh_utils.py
